termin 05 done